force-app/main/default/objects/Demo__c/Demo__c.object-meta.xml
<CustomObject>
    <description>This object holds GPBU demo descriptions and install links.</description>
    <label>Demo</label>
    <nameField>
        <displayFormat>D-{0}</displayFormat>
        <label>Demo Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>