force-app/main/default/objects/Demo__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A short description of the demo</description>
    <inlineHelpText>A short description of the demo</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>