force-app/main/default/objects/Demo__c/fields/Google_Drive_Folder__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder__c</fullName>
    <description>Link to a related content folder including how-to videos and more in depth demo details.</description>
    <inlineHelpText>Link to a related content folder including how-to videos and more in depth demo details.</inlineHelpText>
    <label>Google Drive Folder</label>
    <type>Url</type>
</CustomField>